Near Final Draft

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <div class="container">
-    <h1>Box Organizer</h1>
+    <h1>Where's All my Stuff!</h1>
 
     <!-- Checkboxes for adding boxes or items -->
     <label class="checkbox-label">
-      <input type="checkbox" id="addBoxCheckbox" checked> Add Box
+      <input type="checkbox" id="addBoxCheckbox"> Add Box
     </label>
     <label class="checkbox-label">
       <input type="checkbox" id="addItemCheckbox"> Add Item
@@ -41,7 +41,6 @@
     <!-- Popup for no results -->
     <div class="popup" id="noResultsPopup">
       <p>No results found for your search.</p>
-      <button id="closePopupButton">Close</button>
     </div>
 
     <script src="script.js"></script>
