--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>Where's All my Stuff!</h1>
-
+    <div class="editing">
     <!-- Checkboxes for adding boxes or items -->
     <label class="checkbox-label">
       <input type="checkbox" id="addBoxCheckbox"> Add Box
@@ -32,9 +32,10 @@
 
     <!-- Buttons for adding boxes/items and searching -->
     <button id="addButton">Add</button>
+</div>
+
     <input type="text" id="searchInput" placeholder="Search...">
     <button id="searchButton">Search</button>
-
     <!-- Display selected box contents here (hidden by default) -->
     <div id="boxContents" style="display: none;"></div>
 
